Fix the overflow: none bug that hides list on longer screens

--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -1,10 +1,9 @@
 .popup {
-  // z-index: 99;
   position: absolute;
   max-width: 300px;
   background: rgba(255, 255, 255, .7);
   padding: 10px;
-  opacity: 0;
+  display: none;
   p, a {
     margin: 0px;
   }
