--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,7 +27,7 @@ html {
 body {
   padding: 0px;
   margin: 0px;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .bg {
